--- a/sec1.html
+++ b/sec1.html
@@ -156,17 +156,9 @@
         <div>
             الوُضوء  لغة: مشتق من الوضاءة، وهي الحسن والنظافة. <br>
             وشرعاً: استعمال الماء في الأعضاء الأربعة -وهي الوجه واليدان والرأس والرجلان- على صفة مخصوصة في الشرع، على وجه التعبد لله تعالى. <br>
-            <h4>أما حكم الوضوء هو :</h4> فهو واجب , ولا يصح الصلاه بدونه .
+            <h4>أما حكم الوضوء هو :</h4>
+            أنه واجب على المُحْدِث إذا أراد الصلاة وما في حكمها، كالطواف ومسِّ المصحف.
         </div>
-        <hr>
-        <ol>
-            <li>
-            صححه الألباني (الإرواء برقم 247)
-            </li>
-            <li>
-                (1/ 201) صححه الحاكم في المستدرك
-            </li>
-        </ol>
     </section>
 </body>
 
