--- a/sec2.html
+++ b/sec2.html
@@ -160,13 +160,18 @@
         <span>
                     فقوله تعالى (يَا أَيُّهَا الَّذِينَ آمَنُوا إِذَا قُمْتُمْ إِلَى الصَّلَاةِ فَاغْسِلُوا وُجُوهَكُمْ وَأَيْدِيَكُمْ إِلَى الْمَرَافِقِ وَامْسَحُوا بِرُءُوسِكُمْ وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ وَإِنْ كُنْتُمْ جُنُبًا فَاطَّهَّرُوا وَإِنْ كُنْتُمْ مَرْضَى أَوْ عَلَى سَفَرٍ أَوْ جَاءَ أَحَدٌ مِنْكُمْ مِنَ الْغَائِطِ أَوْ لَامَسْتُمُ النِّسَاءَ فَلَمْ تَجِدُوا مَاءً فَتَيَمَّمُوا صَعِيدًا طَيِّبًا فَامْسَحُوا بِوُجُوهِكُمْ وَأَيْدِيكُمْ مِنْهُ مَا يُرِيدُ اللَّهُ لِيَجْعَلَ عَلَيْكُمْ مِنْ حَرَجٍ وَلَكِنْ يُرِيدُ لِيُطَهِّرَكُمْ وَلِيُتِمَّ نِعْمَتَهُ عَلَيْكُمْ لَعَلَّكُمْ تَشْكُرُونَ) [المائدة: 6]
         </span>
-                (2). <br> <h4> و أما متي يجب :</h4> فإذا دخل وقت الصلاة أو أراد الإنسان الفعل الذي يشترط له الوضوء، وإن لم يكن ذلك متعلقاً بوقت، كالطواف ومس المصحف .
-        </div>
+        وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاةً بغير طُهُور، ولا صدقة من غُلُول) (1). وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يقبل الله صلاة من أحدث حتى يتوضأ) (2).<br>
+        ولم ينقل عن أحد من المسلمين في ذلك خلاف، فثبتت بذلك مشروعية الوضوء: بالكتاب، والسنة، والإجماع.
+        <h4>وأما على مَنْ يجب:</h4>
+        فيجب على المسلم البالغ العاقل إذا أراد الصلاة وما في حكمها.<br>
+        وأما متى يجب؟ فإذا دخل وقت الصلاة أو أراد الإنسان الفعل الذي يشترط له الوضوء، وإن لم يكن ذلك متعلقاً بوقت، كالطواف ومس المصحف.
+    </div>
         <hr>
         <ol>
             <li>
-                (2) [سوره المائده : 6]
+                رواه مسلم برقم (224). والغلول: السرقة من أموال الغنيمة وغيرها.
             </li>
+            <li>رواه مسلم برقم (223).</li>
         </ol>
     </section>
 </body>
