--- a/sec3.htm
+++ b/sec3.htm
@@ -174,8 +174,9 @@
                         الاستجمار أو الاستنجاء عند وجود سببهما لما تقدم.
                     </li>
                     <li>
-                        الموالاة و الترتيب.
+                      الموالاة.
                     </li>
+                    <li>الترتيب. وسيأتي الكلام عليهما بعد قليل.</li>
                     <li>
                         غسل جميع الأعضاء الواجب غسلها.
                     </li>
@@ -184,7 +185,7 @@
         <hr>
         <ol>
             <li>
-                (1) الترمذي برقم (407) وقال: "حديث حسن"
+                رواه البخاري برقم (1)، ومسلم برقم (1907).
             </li>
         </ol>
     </section>
