--- a/sec4.htm
+++ b/sec4.htm
@@ -165,29 +165,29 @@
                 </li>
                 <li>
                     مسح الرأس كله مع الأذنين: <span>لقوله تعالى: (وَامْسَحُوا بِرُءُوسِكُمْ) [المائدة: 6</span>.
-                    <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الأذنان من الرأس) (2) </span> فلا يُجزئ مسح بعض الرأس دون بعضه
+                    <span class="dif">وقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الأذنان من الرأس) (1)  </span> فلا يُجزئ مسح بعض الرأس دون بعضه
                 </li>
                 <li>
                     غسل الرجلين إلى الكعبين؛ <span>لقوله تعالى: (وَأَرْجُلَكُمْ إِلَى الْكَعْبَيْنِ) [المائدة: 6]</span>.
                 </li>
                 <li>
-                    الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (3) وغيره.
+                    الترتيب: لأن الله تعالى ذكره مرتباً؛ وتوضأ رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - مرتباً على حسب ما ذكر الله سبحانه: الوجه، فاليدين، فالرأس، فالرجلين، كما ورد ذلك في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - في حديث عبد الله بن زيد (2) وغيره.
                 </li>
                 <li>
-                    الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (4)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل.
+                    الموالاة: بأن يكون غسل العضو عقب الذي قبله مباشرة بدون تأخير، فقد كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأ متوالياً، <span class="dif">ولحديث خالد بن معدان: (أن النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - رأى رجلاً يصلي وفي ظهر قدمه لُمعَةٌ قدر الدرهم لم يصبها الماء، فأمره أن يعيد الوضوء) (3)، </span> فلو لم تكن الموالاة شرطاً لأمره بغسل ما فاته، ولم يأمره بإعادة الوضوء كله. واللُّمْعَة: الموضع الذي لم يصبه الماء في الوضوء أو الغسل.
                 </li>
             </ol>
         </div>
         <hr>
         <ol>
             <li>
-                (2) رواه الترمذي برقم (37) وابن ماجه برقم (443) وصححه الألباني (صحيح سنن ابن ماجه برقم 357، والسلسلة الصحيحة برقم 36) وأفاض الشيخ -رحمه الله- في جمع طرقه والكلام عليه.
+                رواه الترمذي برقم (37) وابن ماجه برقم (443) وصححه الألباني (صحيح سنن ابن ماجه برقم 357، والسلسلة الصحيحة برقم 36) وأفاض الشيخ -رحمه الله- في جمع طرقه والكلام عليه.
             </li>
             <li>
-                (3) رواه البخاري ، ومسلم برقم (1907).
+                أخرجه مسلم برقم (235).
             </li>
             <li>
-                (4) رواه البخاري برقم (4)، ومسلم برقم (1908).
+                رواه أحمد (3/ 424)، وأبو داود برقم (175)، وصححه الألباني. انظر إرواء الغليل (1/ 127).
             </li>
         </ol>
     </section>
