--- a/sec5.htm
+++ b/sec5.htm
@@ -160,25 +160,36 @@
             <h4>تسمى هذه الأفعال بسنن الوضوء، وهي : </h4>
             <ol>
                 <li>
-                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (5)</span>
+                    التسمية في أوله: <span class="dif"> لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا وضوء لمن لم يذكر اسم الله عليه) (1)</span>
                 </li>
                 <li>
-                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (6)</span>
+                    السواك: <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لولا أن أشق على أمتي لأمرتهم بالسواك مع كل وضوء) (2)</span>
                 </li>
                 <li>
                     غسل الكفين ثلاثاً في أول الوضوء: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - ذلك، إذ كان يغسل كفيه ثلاثاً كما ورد في صفة وضوئه.
                 </li>
+                <li>المبالغة في المضمضة والاستنشاق لغير الصائم: فقد ورد في صفة وضوئه - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (فمضمضَ واستنثَر)، ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (وبالغ في الاستنشاق إلا أن تكون صائماً) (3).</li>
+                <li>الدلك، وتخليل اللحية الكثيفة بالماء حتى يدخل الماء في داخلها: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -، فإنه (كان إذا توضأ يدلك ذراعيه) (4)، وكذلك (كان يدخل الماء تحت حنكه ويخلل به لحيته) (5).</li>
+                <li>تقديم اليمنى على اليسرى في اليدين والرجلين: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -، فإنه (كان يحب التيامن في تنعله وترجله وطهوره وفي شأنه كله) (6).</li>
+                <li>تثليث الغسل في الوجه واليدين والرجلين: فالواجب مرة واحدة، ويستحب ثلاثاً، لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - فقد ثبت عنه: (أنه توضأ مرة مرة ومرتين مرتين وثلاثاً ثلاثاً) (7).</li>
+                <li>الذكر الوارد بعد الوضوء: لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (ما منكم أحد يتوضأ فيسبغ الوضوء ثم يقول: أشهد أن لا إله إلا الله وحده لا شريك له، وأشهد أن محمداً عبده ورسوله، إلا فتحت له أبواب الجنة الثمانية، يدخل من أيها شاء) (8).</li>
             </ol>
         </div>
         <hr>
         <ol>
             <li>
-                (5) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
-                (إرواء الغليل 1/ 122).
+              أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
+(إرواء الغليل 1/ 122).
             </li>
             <li>
-                (6) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
+                أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
             </li>
+            <li>أخرجه أبو داود برقم (142)، والنسائي (1/ 66 رقم 87)، وصححه الألباني (صحيح النسائي رقم 85).</li>
+            <li>رواه ابن حبان في صحيحه (3/ 363) برقم (1082)، والبيهقي في السنن الكبرى (1/ 196)، والحاكم في المستدرك (1/ 243) وصححه، وابن خزيمة في صحيحه (1/ 62)، والإمام أحمد في مسنده (4/ 39).</li>
+            <li>رواه أبو داود برقم (145)، وصححه الألباني (الإرواء برقم 92).</li>
+            <li> متفق عليه: رواه البخاري برقم (168)، ومسلم برقم (226).</li>
+            <li>متفق عليه: رواه البخاري برقم (157، 158، 159) ومسلم برقم (226) وعنده ذكر الثلاث فقط.</li>
+            <li>أخرجه مسلم برقم (234) وزاد الترمذي: (اللهم اجعلني من التوابين واجعلني من المتطهرين) برقم (55)، وصححه بهذه الزيادة الألباني (الإرواء برقم 96).</li>
         </ol>
     </section>
 </body>
