--- a/sec7.htm
+++ b/sec7.htm
@@ -161,31 +161,31 @@
             </h4>
             <ol>
                 <li>
-                    الصلاة: لحديث ابن عمر مرفوعاً: <span class="dif">(لا يقبل الله صلاة بغير طُهُور، ولا صدقة من غلول) (11)</span> .
+                    الصلاة: لحديث ابن عمر مرفوعاً: <span class="dif">(لا يقبل الله صلاة بغير طُهُور، ولا صدقة من غلول) (1).</span> .
                 </li>
                 <li>
-                    الطواف بالبيت الحرام فرضاً كان أو نفلاً: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - (فإنه توضأ ثم طاف بالبيت) (12)، و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الطواف بالبيت صلاة إلا أن الله أباح فيه الكلام) (13)</span> ، ولمنعه الحائض من الطواف حتى تطهر .
+                     الطواف بالبيت الحرام فرضاً كان أو نفلاً: لفعله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - (فإنه توضأ ثم طاف بالبيت) (2)، <span class="dif">ولقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (الطواف بالبيت صلاة إلا أن الله أباح فيه الكلام) (3)</span>، ولمنعه الحائض من الطواف حتى تطهر (4).
                 </li>
                 <li>
-                    مس المصحف ببشرته بلا حائل: <span>لقوله تعالى: (لَا يَمَسُّهُ إِلَّا الْمُطَهَّرُونَ) [الواقعة: 79]</span> .و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يمس القرآن إلا طاهر) (14)</span> .
+                    مس المصحف ببشرته بلا حائل: <span>لقوله تعالى: (لَا يَمَسُّهُ إِلَّا الْمُطَهَّرُونَ) [الواقعة: 79]</span> .و <span class="dif">لقوله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (لا يمس القرآن إلا طاهر) (5).</span> .
                 </li>
             </ol>
         </div>
         <hr>
         <ol>
             <li>
-                (11) أخرجه مسلم برقم (235).
+                رواه مسلم برقم (224)، والترمذي برقم (1).
             </li>
             <li>
-                (12) رواه أحمد (3/ 424)، وأبو داود برقم (175)، وصححه الألباني. انظر إرواء الغليل (1/ 127).
+               رواه البخاري برقم (1614)، ومسلم برقم (1235).
             </li>
             <li>
-                (13) أخرجه أحمد (2/ 418)، وأبو داود برقم (101)، والحاكم (1/ 147) وغيرهم من حديث أبي هريرة - رضي الله عنه -، وحسنه: ابن الصلاح، وابن كثير، والعراقي، وقواه المنذري وابن حجر، وقال الألباني: حسن.
-                (إرواء الغليل 1/ 122).
+                 رواه ابن حبان برقم (3836)، والحاكم (1/ 459) وصحح إسناده، ووافقه الذهبي، والبيهقي (5/ 87) وغيرهم، وصححه الألباني (الإرواء برقم 121).
             </li>
             <li>
-                (14) أخرجه البخاري معلقاً بصيغة جزم: ك الصيام، ب سواك الرطب واليابس للصائم. ووصله النسائي (انظر: فتح الباري 4/ 159).
+                 رواه البخاري برقم (305)، ومسلم برقم (1211).
             </li>
+            <li>أخرجه مالك (1/ 199)، والدارقطني (1/ 121)، والبيهقي (1/ 87)، والحاكم (1/ 395) وصححه، وصححه الألباني (الإرواء برقم 122).</li>
         </ol>
     </section>
 </body>
