--- a/sec8.htm
+++ b/sec8.htm
@@ -164,38 +164,38 @@
                     عند ذكر الله تعالى وقراءة القرآن.
                 </li>
                 <li>
-                    عند كل صلاة: لمواظبته - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - على ذلك، كما <span class="dif">في حديث أنس - رضي الله عنه - قال: (كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأعند كل صلاة) (15)</span> .
+                    عند كل صلاة: لمواظبته - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - على ذلك، كما <span class="dif">في حديث أنس - رضي الله عنه - قال: (كان النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - يتوضأعند كل صلاة) (1).</span> .
                 </li>
                 <li>
-                    يستحب الوضوء للجنب إذا أراد أن يعود للجماع، أو أراد النوم أو الأكل أو الشرب: <span class="dif">لحديث أبي سعيد الخدري - رضي الله عنه - أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (إذا أتى أحدكم أهله، ثم أراد أن يعود، فليتوضأ) (16)</span> و <span class="dif"> لحديث عائشة رضي الله عنها: (أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - كان إذا أراد أن ينام وهو جنب، توضأ وضوءه للصلاة، قبل أن ينام) (18). وفي رواية لها: (فأراد أن يأكل أو ينام) (17)</span> .
+                    يستحب الوضوء للجنب إذا أراد أن يعود للجماع، أو أراد النوم أو الأكل أو الشرب: <span class="dif">لحديث أبي سعيد الخدري - رضي الله عنه - أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - قال: (إذا أتى أحدكم أهله، ثم أراد أن يعود، فليتوضأ) (2).</span> و <span class="dif">ولحديث عائشة رضي الله عنها: (أن رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - كان إذا أراد أن ينام وهو جنب، توضأ وضوءه للصلاة، قبل أن ينام) (3). وفي رواية لها: (فأراد أن يأكل أو ينام) (4).</span> .
                 </li>
                 <li>
-                    الوضوء قبل الغسل: لحديث عائشة رضي الله عنها قالت: <span class="dif">(كان رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - إذا اغتسل من الجنابة يبدأ، فيغسل يديه، ثم يفرغ بيمينه على شماله، فيغسل فرجه، ثم يتوضأ وضوءه للصلاة ... ) الحديث (19)</span> .
+                    الوضوء قبل الغسل: لحديث عائشة رضي الله عنها قالت: <span class="dif">(كان رسول الله - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ - إذا اغتسل من الجنابة يبدأ، فيغسل يديه، ثم يفرغ بيمينه على شماله، فيغسل فرجه، ثم يتوضأ وضوءه للصلاة ... ) الحديث (5).</span> .
                 </li>
                 <li>
-                    عند النوم: لحديث البراء بن عازب - رضي الله عنه - قال: <span class="dif">قال النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إذا أتيت مضجعك فتوضَّأ وضوءك للصلاة، ثم اضطجع على شقك الأيمن ... ) الحديث (20)</span> .
+                    عند النوم: لحديث البراء بن عازب - رضي الله عنه - قال: <span class="dif">قال النبي - صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ -: (إذا أتيت مضجعك فتوضَّأ وضوءك للصلاة، ثم اضطجع على شقك الأيمن ... ) الحديث (6)</span>.
                 </li>
             </ol>
         </div>
         <hr>
         <ol>
             <li>
-                (15) أخرجه البخاري برقم (214).
+                أخرجه البخاري برقم (214).
             </li>
             <li>
-                (16) أخرجه مسلم برقم (308).
+                أخرجه مسلم برقم (308).
             </li>
             <li>
-                (17) أخرجه مسلم برقم (305).
+                 أخرجه مسلم برقم (305).
             </li>
             <li>
-                (18) انظر المصدر السابق، الحديث الذي يليه.
+                انظر المصدر السابق، الحديث الذي يليه. من كتاب الفقه الميسر في ضوء الكتاب والسنه
             </li>
             <li>
-                (19) أخرجه مسلم برقم (316).
+                أخرجه مسلم برقم (316).
             </li>
             <li>
-                (20) أخرجه البخاري برقم (247).
+                أخرجه البخاري برقم (247).
             </li>
         </ol>
     </section>
