--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
   <!-- index style sheet  -->
   <link rel="stylesheet" href="css/main.css">
   <title>صلي معنا</title>
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 
-<body dir="rtl">
-  <video src="media/proj_intro.mp4" lang="ar" controls autoplay>
+<body dir="rtl" onload="play_vid()">
+  <video lang="ar" id="play_vid" controls muted autoplay>
+    <source id="autoplay" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
+  <img src="images/mute.png" alt="unMute" onclick="unMute()" id="unMute">
+  <input type="button" id="skip" onclick="skip()" value="تخطي">
   <!-- start Menu  -->
   <header class="header">
       <ul class="ul">
